sample-python-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-microservice-service
spec:
  selector:
    app: dummy-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
