sample-python-app/k8s/istio-ilb-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ilb-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dummy-microservice-vs
spec:
  hosts:
  - "*"
  gateways:
  - ilb-gateway
  http:
  - match:
    - uri:
        prefix: /get
    route:
    - destination:
        host: dummy-microservice-service
        port:
          number: 80
